fix: make hero image full bleed

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -63,10 +63,14 @@
 /**
   * Content well
   */
-#main,
+.entry-content > div:not(.full-bleed),
 .tg-header-sticky-wrapper {
 	max-width: 1200px;
 	margin: 0 auto;
+
+	@media screen and (max-width:992px) {
+		max-width: 100%;
+	}
 }
 
 /**
